<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>
    <string name="status">Completed</string>
    <string name="date">Date: </string>
    <string name="description">Description: </string>
    <string name="title">"Title: "</string>
    <string name="priority">Priority: </string>
    <string name="save">Save</string>
    <string name="normal">normal</string>
    <string name="medium">medium</string>
    <string name="high">high</string>

    <string-array name="priority_array">
        <item>@string/normal</item>
        <item>@string/medium</item>
        <item>@string/high</item>
    </string-array>
    <string name="overflow">Overflow</string>
    <string name="change_task">change task</string>
    <string name="delete_task">delete task</string>
    <string name="time">Time:</string>

</resources>
